templates/session-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcadium-session-server-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: arcadium-session-server
