templates/storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcadium-storage-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: arcadium-storage
