templates/transport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcadium-transport-service
spec:
  type: NodePort
  ports:
    - nodePort: 30007
      port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: arcadium-transport
