templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcadium-web-service
spec:
  type: NodePort
  ports:
    - nodePort: 30002
      port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: arcadium-web
