templates/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcadium-worker
spec:
  clusterIP: None
  ports:
    - name: http2
      port: 8080
  selector:
    app: arcadium-worker
